# if-to-let-chain

./: Cargo.toml  LICENSE-MIT  README.md
src/: main.rs  tests.rs
src/inputs/: closure.rs  comment.rs  or.rs  simple.rs
src/snapshots/: closure.snap  comment.snap  or.snap  simple.snap
