[package]
name = "if-to-let-chain"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
getopts = "0.2.21"
proc-macro2 = { version = "1.0.39", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit", "extra-traits"] }

[dev-dependencies]
insta = "1.14.0"
