[package]
name = "if-to-let-chain"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Convert macros from the let_chains crate to if chains"
repository = "https://github.com/Alexendoo/if-to-let-chain"
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
getopts = "0.2.21"
proc-macro2 = { version = "1.0.39", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit", "extra-traits"] }

[dev-dependencies]
insta = "1.14.0"
